introducing new gps module for properly handle gps device and configs, missing chippers added to dockerfile, jwt manager reset